* Fixed an error in the check_facets diagnostic routine. Thanks to Tristan
  Carrier-Baudouin (Université catholique de Louvain) for pointing this out.
* Fixed a memory leak in the new container_periodic class. Thanks to Massimo
  Marchi (Commissariat á l'Energie Atomique) for pointing this out.
* Removed some duplicate or unnecessary #include statements of the standard C++
  header files
* More changes for older MS Visual C++ compatability
* Updated Doxyfile to 1.8.1.1

Version 0.4.4 (January 17th 2012)
=================================
* Fixed an error in pointer arithmetic that was introduced in version 0.4,
  which would occur in cases where the delete stack was extended when a large
  number of vertices were being removed. Thanks to Jeff Johnson (Lawrence
  Berkeley Laboratory) and Matt Freeman (Texas A&M University) for pointing
  this out.

Version 0.4.3 (November 12th 2011)
==================================
* Removed spurious Gnuplot output line from torus.cc example
* More changes for better Visual C++ compatibility
* Fixed indexing error in worklist generation routine. This had no effect
  on the generated worklists, but would become apparent in other situations.
* Added rad_option.hh to the list of files included by voro++.hh for
  completeness
* Fix errors in Gnuplot commands in the basic examples README file. Thanks to
  William-Fernando Oquendo (National University of Colombia) for pointing this
  out.
* Fixed memory allocation issue in face_freq_table routine - thanks to Lingti
  Kong for pointing this out
* Minor cleanups and optimizations to wall classes

Version 0.4.2 (September 23rd 2011)
===================================
* Fixed a bug in the put_remap routine where a z periodic boolean was
  switched to an x periodic boolean. This would only be noticed when using
  mixed periodic boundary conditions and importing particles that need to be
  remapped.
* The pid function in the c_loop_base class was mistakenly labeled as double